k8s/joke-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joke-service
spec:
  selector:
    app: joke-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
