k8s/QuoteServiceIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quote-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/quote(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: quote-service
                port:
                  number: 8083
